--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br>
         <p>Makasih yaaudah nemenin ai dari lama, hari ini, tepat udah jalan 7 bulan, sekali lagii, makasih yaa, dan ai jg mau bilang sorry klo ai ada kesalah selama ini, entah ucap kata, entah perilaku, entah sikap, yg bikin u marah atau badmood. Maaf banget yaww</p>
         . Makasih juga udah menjadi orang yg sempurna buat hidup ai, Makasih sekali lagii, u udah jadi orang yg nerima ai apa adanya, itu sangat berarti buat ai, makasih yaa 
-        </p><br><p>I Love U So Much NIKITAA<3</p>
+       .  I Love U So Much NIKITAA<3</p>
       </center>
 <p class="signed">Your BF 
     <br> Fariq
