--- a/7months.html
+++ b/7months.html
@@ -34,7 +34,7 @@
   </head>
   <body>
 
-  	<div class="container"><div class="image"><img src="https://c.tenor.com/yNFbO-SVaVAAAAAC/panda-bear-brown-bear.gif" class="rounded" width="200"></div><div class="word"><h1>GoodMorning <3</h1><br><p>Haii babe, gimana bobo na? nyenyak nda? ai sengaja bikin ini buat u sksksk, eh btw hari ini kita udh tepat 7 bulan jalan, dari 14 Mei sampe sekarang, nda kerasa deh, udah mau 7 bulan ae sksk, moga awet yaa sampe nanti, soal na ai cuma mau sama u sampe akhir, g mau pisah sama u :( soal na ai udh sayang banget sama u, ai mau u jadi my first and my last, okehh, I LOVE U SO SO SO SO SO SO SO SO MUCHH BABE</p><br><p>ur bf, frq</p></div></div>
+  	<div class="container"><div class="image"><img src="https://c.tenor.com/yNFbO-SVaVAAAAAC/panda-bear-brown-bear.gif" class="rounded" width="200"></div><div class="word"><h1>GoodMorning <3</h1><br><p>Haii babe, gimana bobo na? nyenyak nda? ai sengaja bikin ini buat u sksksk, eh btw hari ini kita udh tepat 7 bulan jalan, dari 14 Mei sampe sekarang, nda kerasa deh, udah mau 7 bulan ae sksk, moga awet yaa sampe nanti, soal na ai cuma mau sama u sampe akhir, g mau pisah sama u :( soal na ai udh sayang banget sama u, ai mau u jadi my first and my last, okehh, I LOVE U SO SO SO SO SO SO SO SO MUCHH BABE</p><br><p>ur bf<3 - frq</p></div></div>
     
 
     <!-- Optional JavaScript; choose one of the two! -->
